# 21wt-lab-efficient-parallel-cpp

./: .gitignore  .gitmodules  README.md
exercise1/: FAQ.txt  README
exercise1/hash/: CMakeLists.txt  README
exercise1/hash/docs/: hash_a.txt  hash_b.txt  hash_c.txt  hash_original.txt  hash_std.txt
exercise1/hash/eval/: make_plots.R
exercise1/hash/implementation/: cell.h  cell_iterator.h  hash_a.h  hash_b.h  hash_original.h
exercise1/hash/tests/: time.cpp
exercise1/pq/: CMakeLists.txt  README
exercise1/pq/docs/: pq_a.txt  pq_b.txt  pq_c.txt  pq_d.txt  pq_std.txt
exercise1/pq/eval/: make_plots.R
exercise1/pq/implementation/: AlignedVector.h  pq_a.h  pq_b.h  pq_c.h  pq_d.h
exercise1/pq/tests/: correctness.cpp  time.cpp
exercise2/: .gitignore  CMakeLists.txt  README
exercise2/data/: download_data.sh  test_graph.graph
exercise2/eval/: Plots.ipynb  benchmark-batched.csv  benchmark-single.csv
exercise2/implementation/: adj_array.hpp  adj_list.hpp  bfs.hpp  dijkstra.hpp  edge_list.hpp  indexed_priority_queue.hpp  node_graph.hpp  weighted_graph_paired.hpp  weighted_graph_separated.hpp
exercise2/tests/: benchmark.cpp  correctness.cpp  no_tests.txt
exercise3/: CMakeLists.txt  README
exercise3/data/: generate_graphs.sh
exercise3/eval/: Dynamic Connectivity.ipynb  Microbenchmark access patterns.ipynb  access-pattern-exp1-1000000000-u64.csv  access-pattern-exp2-1000000000-u64.csv  exp1-16-10.csv  exp4-16-10.csv  experiments.py
exercise3/implementation/: adj_array.hpp  dynamic_connectivity.cpp  dynamic_connectivity.hpp  dynamic_connectivity_b.cpp  dynamic_connectivity_c.cpp  dynamic_connectivity_d.cpp  dynamic_connectivity_e.cpp  dynamic_connectivity_mt.hpp  dynamic_connectivity_sequential.cpp  dynamic_connectivity_sequential.hpp  edge_list.hpp  graph_algorithms.hpp  microbenchmark_access_patterns.cpp  num_components.hpp  parallel_graph_algorithms.hpp  reference_solution.cpp  reference_solution.hpp
exercise3/tests/: benchmark_dynamic_connectivity.cpp  correctness.cpp  microbenchmark_access_patterns.cpp
exercise3/tools/: graph_generator.cpp
exercise3/utils/: allocation.h  statistics.h
exercise4/: CMakeLists.txt  README
exercise4/data/: download_data.sh
exercise4/eval/: eval_dag-graph_100-small-work-factors.csv  eval_dag-graph_100.csv  eval_data_structures.ipynb  eval_tree-graph_100.csv  eval_tree-tree_100.csv  eval_tree_and_dag.ipynb  microbenchmark-concurrent-container-small.csv  microbenchmark-concurrent-container.csv  microbenchmark-concurrent-queue.csv  microbenchmark-mutex-std-queue.csv  recovery.csv  tree_solver_queue_sizes.csv  tree_solver_queue_sizes_test.csv
exercise4/eval/.ipynb_checkpoints/: eval_data_structures-checkpoint.ipynb
exercise4/implementation/: concurrent_container.hpp  concurrent_queue.hpp  concurrent_queue_cas_element.hpp  dag.hpp  dag_solver.hpp  mutex_std_queue.hpp  tree.hpp  tree_solver.hpp  tree_solver_naive.hpp  tree_solver_sequential.hpp
exercise4/source/: correctness_concurrent_container.cpp  correctness_concurrent_queue.cpp  correctness_dag.cpp  correctness_tree.cpp  eval_dag.cpp  eval_tree.cpp  microbenchmark_data_structures.cpp
exercise4/tools/: generator_parameters.txt  graph_generator.cpp  tree_generator.cpp
exercise4/utils/: misc.h
exercise5/: CMakeLists.txt  assignment.md
exercise5/app/: external_maps.cpp  generate.cpp
exercise5/benchmarks/: bloom_filter_benchmark.cpp  hash_map_benchmark.cpp  hash_map_microbenchmark.cpp  list_benchmark.cpp  utils.h
exercise5/eval/: Evaluation.ipynb  Untitled.ipynb
exercise5/eval/i10pc131/: BF00_find.csv  BF01_find.csv  BF02_find.csv  BF03_find.csv  BF04_find.csv  BF05_find.csv  BF06_find.csv  BF07_find.csv  BF08_find.csv  BF09_find.csv  BF10_find.csv  H01_load_factor.csv  H01_successful_find.csv  H01_unsuccessful_find.csv  H02_load_factor.csv  H02_successful_find.csv  H02_unsuccessful_find.csv  H03_load_factor.csv  H03_successful_find.csv  H03_unsuccessful_find.csv  H04_load_factor.csv  H04_successful_find.csv  H04_unsuccessful_find.csv  H05_load_factor.csv  H05_successful_find.csv  H05_unsuccessful_find.csv  L01_find_and_modifiy.csv  L01_successful_find.csv  L01_unsuccessful_find.csv  L02_find_and_modifiy.csv  L02_successful_find.csv  L02_unsuccessful_find.csv  L03_find_and_modifiy.csv  L03_successful_find.csv  L03_unsuccessful_find.csv
exercise5/eval/laptop/: BF00_find.csv  BF01_find.csv  BF02_find.csv  BF03_find.csv  BF04_find.csv  BF05_find.csv  BF06_find.csv  BF07_find.csv  BF08_find.csv  BF09_find.csv  BF10_find.csv  H01_load_factor.csv  H01_successful_find.csv  H01_unsuccessful_find.csv  H02_load_factor.csv  H02_successful_find.csv  H02_unsuccessful_find.csv  H03_load_factor.csv  H03_successful_find.csv  H03_unsuccessful_find.csv  H04_load_factor.csv  H04_successful_find.csv  H04_unsuccessful_find.csv  H05_load_factor.csv  H05_successful_find.csv  H05_unsuccessful_find.csv  L01_find_and_modifiy.csv  L01_successful_find.csv  L01_unsuccessful_find.csv  L02_find_and_modifiy.csv  L02_successful_find.csv  L02_unsuccessful_find.csv  L03_find_and_modifiy.csv  L03_successful_find.csv  L03_unsuccessful_find.csv
exercise5/src/: atomic_shared_ptr.h  bloom_filter.h  bucket.h  hash_map.h  hashmap.h  instance_generation.h  list.h  marked_ptr.h  other_hash_maps.h  utils.h
exercise5/src/lists/: _atomic_shared_ptr_list.h  _leaking_atomic_list.h  atomic_marked_list.h  atomic_shared_ptr_list.h  leaking_atomic_list.h  list_concept.h  node_mutex_list.h  single_mutex_list.h
exercise5/tests/: atomic_shared_ptr_test.cpp  bucket_test.cpp  hash_map_test.cpp  list_test.cpp  marked_ptr_test.cpp
